# Ether

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
cmake/: FindKernel32.cmake
include/Ether/: export.hpp
src/: CMakeLists.txt  crt.cpp  crt_exit.cpp  crt_exit.hpp
