cmake_minimum_required(VERSION 3.10)

project(MyProject LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_EXTENSIONS FALSE)
set(CMAKE_CXX_FLAGS "/permissive- /Zc:preprocessor /utf-8 /Wall /nologo")
set(CMAKE_CXX_FLAGS_DEBUG "")
set(CMAKE_CXX_FLAGS_RELEASE "")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "")
set(CMAKE_CXX_FLAGS_MINSIZEREL "")
set(CMAKE_LINKER_FLAGS "/NODEFAULTLIB")
set(CMAKE_EXE_LINKER_FLAGS "/ENTRY:_Ether_")
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
message(STATUS "${CMAKE_CXX_FLAGS}")
message(STATUS "${CMAKE_LINKER_FLAGS}")
message(STATUS "${CMAKE_EXE_LINKER_FLAGS}")
message(STATUS "${CMAKE_MODULE_LINKER_FLAGS}")
message(STATUS "${CMAKE_SHARED_LINKER_FLAGS}")
message(STATUS "${CMAKE_STATIC_LINKER_FLAGS}")
message(STATUS "${CMAKE_INTERPROCEDURAL_OPTIMIZATION}")

add_subdirectory(src)

add_subdirectory(apps)